fix bugs in initial posts

--- a/blog/_posts/2012-09-09-functors.md
+++ b/blog/_posts/2012-09-09-functors.md
@@ -18,7 +18,7 @@ You're probably acquainted with maps. Nevertheless, let's see an example in Hask
 
 A map receives a function that transform an element of type `a` in a element in `a` type `b` and a list of elements of type `a`. We can see this by checking the its type on ghci:
 
-{% highlight text %}
+{% highlight haskell %}
 
 >:t map
 map :: (a -> b) -> [a] -> [b]
@@ -29,7 +29,7 @@ What if we want to apply a function to the elements of other structures beside l
 
 Let's start with the `Maybe` datatype already defined on Prelude:
 
-{% highlight text %}
+{% highlight haskell %}
 
 data Maybe a = Nothing | Just a
 
@@ -37,7 +37,7 @@ data Maybe a = Nothing | Just a
 
 In this case, the example `map (+1) (Just 1)` will not work. So, let's write a function to apply the function only to the "internal" type of a `Maybe`:
 
-{% highlight text %}
+{% highlight haskell %}
 
 maybeMap:: (a -> b) -> Maybe a -> Maybe b
 maybeMap f (Just x) = Just (f x)
@@ -47,17 +47,17 @@ maybeMap _ Nothing  = Nothing
 
 A classical example is performing a map over the elements a tree. Let's define a datatype `Tree` representing a binary tree:
 
-{% highlight text %}
+{% highlight haskell %}
 
-data Tree a =   Node (Tree a) (Tree a) 
-              | Leaf a 
+data Tree a =   Node (Tree a) (Tree a)
+              | Leaf a
                 deriving (Show)
 
 {% endhighlight %}
 
 To apply a function to its internal elements we can do:
 
-{% highlight text %}
+{% highlight haskell %}
 
 treeMap :: (a -> b) -> Tree a -> Tree b
 treeMap f (Leaf a)   = Leaf (f a)
@@ -67,7 +67,7 @@ treeMap f (Node l r) = Node (treeMap f l) (treeMap f r)
 
 We can test it by doing:
 
-{% highlight text %}
+{% highlight haskell %}
 
 > let t = Node (Leaf 1) (Node (Leaf 2) (Leaf 3))
 > treeMap (+1) t
@@ -77,7 +77,7 @@ Node (Leaf 2) (Node (Leaf 3) (Leaf 4))
 
 The Prelude allow us to implement a common interface using the typeclass `Functor`:
 
-{% highlight text %}
+{% highlight haskell %}
 
 class Functor f where
     fmap :: (a -> b) -> f a -> f b
@@ -86,7 +86,7 @@ class Functor f where
 
 Thus, we can specify an implementation for `Maybe`:
 
-{% highlight text %}
+{% highlight haskell %}
 
 instance Functor Maybe where
     fmap = maybeMap
@@ -95,7 +95,7 @@ instance Functor Maybe where
 
 ... for our `Tree` datatype:
 
-{% highlight text %}
+{% highlight haskell %}
 
 instance Functor Maybe where
     fmap = treeMap
@@ -104,7 +104,7 @@ instance Functor Maybe where
 
 ... and for lists:
 
-{% highlight text %}
+{% highlight haskell %}
 
 instance Functor [] where
     fmap = map
@@ -113,17 +113,17 @@ instance Functor [] where
 
 We can then use now `fmap` to perform mapping on lists, `Maybe` or `Tree`:
 
-{% highlight text %}
+{% highlight haskell %}
 
 fmap (+1) [1, 2, 3] // [2, 3, 4]
 fmap (+1) (Just 10) // Just 11
-fmap (+1) (Leaf 0) // (Leaf 1) 
+fmap (+1) (Leaf 0) // (Leaf 1)
 
 {% endhighlight %}
 
 Note that we can also apply this function recursively to perform mappings into inner types, for example:
 
-{% highlight text %}
+{% highlight haskell %}
 
 fmap (fmap (+1)) [[1,2], [3]] // [[2,3], [4]]
 fmap (fmap (*2)) [Just 4] // [Just 8]
@@ -136,9 +136,9 @@ For instance, a function that receives a `(Just 1)` and returns `Nothing`, is no
 
 So, functors are expected to satisfy two properties: identity and composability.
 
-The  property says that `(fmap id)` is equivalent to `id`. Since we're not changing the internal elements neither the structure of a datatype, we are not changing the datatype at all.
+The **identity** property says that `(fmap id)` is equivalent to `id`. Since we're not changing the internal elements neither the structure of a datatype, we are not changing the datatype at all.
 
-The  means that `(fmap f) . (fmap g)` is equivalent to `fmap (f . g)`
+The **composability** means that `(fmap f) . (fmap g)` is equivalent to `fmap (f . g)`
 
 For further details, this subject is pretty well explained in [2] and [3].
 
@@ -213,14 +213,14 @@ struct Functor {
 
     Functor(int _x){
         x = _x;
-    }    
+    }
     int operator() (int y){
         return x + y;
     }
 };
 
-int main (){    
-    Functor addTwo(2);    
+int main (){
+    Functor addTwo(2);
     cout << addTwo(13) << endl;
     return 0;
 }
@@ -231,6 +231,9 @@ Sure, one could achieve the same behavior with functions using global variables,
 
 ### References
 
-* [[1]("http://stackoverflow.com/questions/356950/c-functors-and-their-uses")]  Stackoverflow - C++ Functors and their uses
-* [[2]("http://book.realworldhaskell.org/read/code-case-study-parsing-a-binary-data-format.html")]  Real World Haskell - Chapter 10. Code case study: parsing a binary data format
-* [[3]("http://learnyouahaskell.com/making-our-own-types-and-typeclasses#the-functor-typeclass")]  Learn You a Haskell - Chapter 8. The Functor typeclass
+* [[1](http://stackoverflow.com/questions/356950/c-functors-and-their-uses)] 
+ Stackoverflow - C++ Functors and their uses
+* [[2](http://book.realworldhaskell.org/read/code-case-study-parsing-a-binary-data-format.html)] 
+ Real World Haskell - Chapter 10. Code case study: parsing a binary data format
+* [[3](http://learnyouahaskell.com/making-our-own-types-and-typeclasses#the-functor-typeclass)] 
+ Learn You a Haskell - Chapter 8. The Functor typeclass
