--- a/blog/_posts/2020-04-24-cpu-cache.md
+++ b/blog/_posts/2020-04-24-cpu-cache.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "CPU Cache"
-tags: [Uncategorized]
+tags: [computer architecture]
 ---
 
 In this post we’ll study CPU caches. We’ll first understand why it exists, some of its typical properties and then explore vulnerabilities associated with CPU cache.
@@ -149,21 +149,21 @@ As we mentioned above, the CPU might perform branch prediction. The problem with
 Consider the following contrived example proposed by ricbit [7]:
 
 {% highlight javascript %}
-if (bigvalue < a.length) { 
+if (bigvalue < a.length) {
   value = a[bigvalue];
   if (value & 1 > 0) {
-    x = a[100]; 
-  } else { 
+    x = a[100];
+  } else {
     x = a[200];
   }
 }
 // Timing attack
-const t1 = performance.now(); 
-const y1 = a[100]; 
+const t1 = performance.now();
+const y1 = a[100];
 const duration1 = performance.now() - t1;
 
-const t2 = performance.now(); 
-const y2 = a[200]; 
+const t2 = performance.now();
+const y2 = a[200];
 const duration2 = performance.now() - t2;
 
 if (duration1 * 10 < duration2) {
@@ -222,7 +222,7 @@ int main() {
     struct sigaction sa;
     memset(&sa, 0, sizeof(sigaction));
     sigemptyset(&sa.sa_mask);
-    
+
     sa.sa_flags     = SA_NODEFER;
     sa.sa_sigaction = handler;
     sigaction(SIGSEGV, &sa, NULL);
