--- a/blog/_posts/2017-01-01-2016-in-review.md
+++ b/blog/_posts/2017-01-01-2016-in-review.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "2016 in Review"
-tags: [meta, personal, retrospective]
+tags: [meta, retrospective]
 ---
 
 This is a meta-post to review what happened in 2016.
