add description to 2020 posts

--- a/blog/_posts/2020-03-07-sockets.md
+++ b/blog/_posts/2020-03-07-sockets.md
@@ -1,6 +1,7 @@
 ---
 layout: post
 title: "Sockets"
+description: "Overview of network sockets"
 tags: [c++, computer network, operating systems]
 ---
 
@@ -62,7 +63,7 @@ Beej describes the *Layered Network Model* but follows with this interesting obs
 > * Host-to-Host Transport Layer (TCP, UDP)
 > * Internet Layer (IP and routing)
 > * Network Access Layer (Ethernet, wi-fi, or whatever)
-> 
+>
 
 
 
@@ -119,7 +120,7 @@ struct addrinfo {
   size_t           ai_addrlen;   // size of ai_addr in bytes
   struct sockaddr *ai_addr;      // struct sockaddr_in or _in6
   char            *ai_canonname; // full canonical hostname
-    
+
   struct addrinfo *ai_next;      // linked list, next node
 };
 {% endhighlight %}
@@ -147,7 +148,7 @@ s = socket(res->ai_family, res->ai_socktype, res->ai_protocol);
 This information can be more easily provided via the struct returned from `getaddrinfo()`. By providing null to `getaddrinfo()` and `AI_PASSIVE` to `ai_flags`, we'll have this function fill the IP in res for us:
 
 {% highlight c++ %}
-hints.ai_family = AF_INET6; 
+hints.ai_family = AF_INET6;
 hints.ai_socktype = SOCK_STREAM;
 // Important! Fill in my IP for me
 hints.ai_flags = AI_PASSIVE;
