--- a/blog/_posts/2020-04-24-cpu-cache.md
+++ b/blog/_posts/2020-04-24-cpu-cache.md
@@ -1,6 +1,7 @@
 ---
 layout: post
 title: "CPU Cache"
+description: "Overview of how CPU cache works and related topics"
 tags: [computer architecture]
 ---
 
