--- a/blog/_posts/2020-09-04-lbfgs.md
+++ b/blog/_posts/2020-09-04-lbfgs.md
@@ -1,6 +1,7 @@
 ---
 layout: post
 title: "L-BFGS"
+description: "Primer on the Broyden–Fletcher–Goldfarb–Shanno non-linear optimization algorithm"
 tags: [artificial intelligence, numerical optimization]
 vanity: "2020-09-04-lbfgs"
 main_image: "taylor-expansion-2d.png"
