--- a/blog/_posts/2020-10-09-lara.md
+++ b/blog/_posts/2020-10-09-lara.md
@@ -1,6 +1,7 @@
 ---
 layout: post
 title: "Paper Reading - Latent Aspect Rating Analysis on Review Text Data"
+description: "Notes on the paper Latent Aspect Rating Analysis on Review Text Data"
 tags: [artificial intelligence, numerical optimization]
 vanity: "2020-10-01-lara-theory"
 excerpt_separator: <!--more-->
