--- a/blog/_posts/2021-01-01-2020-in-review.md
+++ b/blog/_posts/2021-01-01-2020-in-review.md
@@ -2,11 +2,14 @@
 layout: post
 title: "2020 in Review"
 tags: [retrospective]
+excerpt_separator: <!--more-->
 vanity: "2021-01-01-2020-in-review"
 ---
 {% include blog_vars.html %}
 
 This is a meta-post to review what happened in 2020.
+
+<!--more-->
 
 ## Posts Summary
 
