add links to photos

--- a/blog/_posts/2021-01-01-2020-in-review.md
+++ b/blog/_posts/2021-01-01-2020-in-review.md
@@ -51,7 +51,16 @@ Despite travel restrictions, I was able to go on roadtrips around California whi
 
 <figure class="center_children">
     <img src="{{resources_path}}/2020-nps.png" alt="a collage of photos from different national parks in California"/>
-    <figcaption>Top (All in Yosemite): 1. Nevada Fall; 2. Cathedral Peak; 3. Half-dome. Bottom: 4. Bear Gulch reservoir in Pinnacles; 5. Death Valley from the Windrose trail; 6. Red Rock Canyon State Park</figcaption>
+    <figcaption>
+      Top (All in Yosemite):
+      1. <a href="https://www.flickr.com/photos/kunigami/50800718838/" target="_blank">Nevada Fall</a>;
+      2. <a href="https://www.flickr.com/photos/kunigami/50800727303/" target="_blank">Cathedral Peak</a>;
+      3. <a href="https://www.flickr.com/photos/kunigami/50800727608/" target="_blank">Half-dome</a>.
+      Bottom:
+      4. <a href="https://www.flickr.com/photos/kunigami/50800727093/" target="_blank">Bear Gulch reservoir in Pinnacles</a>;
+      5. <a href="https://www.flickr.com/photos/kunigami/50801468616/" target="_blank">Death Valley from the Windrose trail</a>;
+      6. <a href="https://www.flickr.com/photos/kunigami/50787619163/" target="_blank">Red Rock Canyon State Park</a>
+    </figcaption>
 </figure>
 
 
