--- a/blog/_posts/2020-01-04-2019-in-review.md
+++ b/blog/_posts/2020-01-04-2019-in-review.md
@@ -2,9 +2,14 @@
 layout: post
 title: "2019 in Review"
 tags: [retrospective]
+vanity: "2020-01-04-2019-in-review"
 ---
 
+{% include blog_vars.html %}
+
 This is a meta-post to review what happened in 2019.
+
+<!--more-->
 
 ## Posts Summary
 
@@ -65,16 +70,51 @@ I had a chance to see many new National Parks and their natural wonders, as part
 
 ### Books
 
-Books I enjoyed this year:
-* *Range: Why Generalists Triumph in a Specialized World* - David Epstein makes a case that being a generalist can lead to a more successful path. He provided a bunch of examples including Roger Federer and Galileo. Engaging.
-* *A History of Western Philosophy* - Bertrand Russell covers many philosophers and schools of thought. Good perspective on Western Europe's history. His accounts often expose his own beliefs and opinions.
-* *Ten Drugs: How Plants, Powders, and Pills Have Shaped the History of Medicine* - Thomas Hager describes the history of 10 drugs, from opioids, to vaccines and high colestherol drugs. Engaging.
-* *The Book of Why* - Judea Pearl describes some of his work such as Causal Models and Do Calculus in accessible language. The ideas are very clever and interesting, but the language of the book is a bit hyperbolic (e.g. terms like *miracle*, *revolution* and "*scientists couldn't have done this before*") which gets in the way.
-* *Algorithms to Live By* - Brian Christian and Tom Griffiths draw ideas from Computer Science (mostly combinatorial optimization) to solve problems from real life. Great to see many problems and algorithms from grad school in here.
-* *Outliers* - Malcom Gladwell analyzes several success stories to make a compelling case that success is not about just genius and hard-work. The environment where you were born and grow up matter a lot more than we think.
-* *Educated: A Memoir* - Intense and powerful story by Tara Westover. She grew up in an environment very hostile to her education but succeeded in achieving high goals against the odds. Really well written.
-* *Shoe Dog: A Memoir by the Creator of NIKE* - history of Nike from the perspective of its founder, Phil Knight. He is a good writer and Nike had a very interesting initial business model.
-* *Mythos: The Greek Myths Retold* - Stephen Fry provides a nice overview of the Greek Mythology focusing on the gods and semi-gods (not heroes). Casual writing style and interesting connections to the current world (via etymologies).
-I'm looking forward to many more adventures, growth and learning in 2020!
+<table class="books-table">
+    <tbody>
+        <tr>
+            <td><b>Range: Why Generalists Triumph in a Specialized World</b> by David Epstein. It makes a case that being a generalist can lead to a more successful path. He provided a bunch of examples including Roger Federer and Galileo. Engaging.</td>
+            <td><img src="{{resources_path}}/range.jpg" alt="Book Cover"/></td>
+        </tr>
 
-&nbsp;
+        <tr>
+            <td><b>A History of Western Philosophy</b> by Bertrand Russell. covers many philosophers and schools of thought. Good perspective on Western Europe's history. His accounts often expose his own beliefs and opinions.</td>
+            <td><img src="{{resources_path}}/history_western_philosophy.jpg" alt="Book Cover"/></td>
+        </tr>
+
+        <tr>
+            <td><b>Ten Drugs: How Plants, Powders, and Pills Have Shaped the History of Medicine</b> by Thomas Hager. Describes the history of 10 drugs, from opioids, to vaccines and high colestherol drugs. Engaging.</td>
+            <td><img src="{{resources_path}}/ten_drugs.jpg" alt="Book Cover"/></td>
+        </tr>
+
+        <tr>
+            <td><b>The Book of Why</b> by Judea Pearl. Pearl describes some of his work such as Causal Models and Do Calculus in accessible language. The ideas are very clever and interesting, but the language of the book is a bit hyperbolic (e.g. terms like <i>miracle</i>, <i>revolution</i> and "<i>scientists couldn't have done this before</i>") which gets in the way.</td>
+            <td><img src="{{resources_path}}/book_of_why.jpg" alt="Book Cover"/></td>
+        </tr>
+
+        <tr>
+            <td><b>Algorithms to Live By</b> by Brian Christian and Tom Griffiths. The authors draw ideas from Computer Science (mostly combinatorial optimization) to solve problems from real life. Great to see many problems and algorithms from grad school in here.</td>
+            <td><img src="{{resources_path}}/algorithms.jpg" alt="Book Cover"/></td>
+        </tr>
+
+        <tr>
+            <td><b>Outliers</b> by Malcom Gladwell. Analyzes several success stories to make a compelling case that success is not about just genius and hard-work. The environment where you were born and grow up matter a lot more than we think.</td>
+            <td><img src="{{resources_path}}/outliers.jpg" alt="Book Cover"/></td>
+        </tr>
+
+        <tr>
+            <td><b>Educated: A Memoir</b> by Tara Westover. Intense and powerful story. Tara grew up in an environment very hostile to her education but succeeded in achieving high goals against the odds. Really well written.</td>
+            <td><img src="{{resources_path}}/educated.jpg" alt="Book Cover"/></td>
+        </tr>
+
+        <tr>
+            <td><b>Shoe Dog: A Memoir by the Creator of Nike</b> by Phil Knight. history of Nike from the perspective of its founder. Phil is a good writer and Nike had a very interesting initial business model.</td>
+            <td><img src="{{resources_path}}/shoe_dog.jpg" alt="Book Cover"/></td>
+        </tr>
+
+        <tr>
+            <td><b>Mythos: The Greek Myths Retold</b> by Stephen Fry. Provides a nice overview of the Greek Mythology focusing on the gods and semi-gods (not heroes). Casual writing style and interesting connections to the current world (via etymologies).</td>
+            <td><img src="{{resources_path}}/mythos.jpg" alt="Book Cover"/></td>
+        </tr>
+    </tbody>
+</table>
