--- a/blog/_posts/2021-01-01-2020-in-review.md
+++ b/blog/_posts/2021-01-01-2020-in-review.md
@@ -155,7 +155,7 @@ As I mentioned, the pandemic left a lot of more indoor time which led to more re
       <td><img src="{{resources_path}}/the_everything_store.jpg" alt="The Everything Store Book Cover"/></td>
     </tr>
     <tr>
-      <td><b>Everybody Lies</b> by Seth Stephens-Davidowitz. Seth is a data scientist who finds insights using publicly available sources. One of my main takeaways is that Google trends is a particularly rich source of data because people make searches in anonymity. This is in contrast to public surveys or social media where people tend to be "polically correct" and not fully honest.</td>
+      <td><b>Everybody Lies</b> by Seth Stephens-Davidowitz. Seth is a data scientist who finds insights using publicly available sources. One of my main takeaways is that Google trends is a particularly rich source of data because people make searches in anonymity. This is in contrast to public surveys or social media where people tend to be "politically correct" and not fully honest.</td>
       <td><img src="{{resources_path}}/everybody_lies.jpg" alt="Everybody Book Cover"/></td>
     </tr>
     <tr>
@@ -163,7 +163,7 @@ As I mentioned, the pandemic left a lot of more indoor time which led to more re
       <td><img src="{{resources_path}}/dont_make_me_think.jpg" alt="Don't make me think Book Cover"/></td>
     </tr>
     <tr>
-      <td><b>Peopleware</b> by Tom DeMarco and Timothy Lister. Every list of recommended programming books seems to include this (among others that I like such as *Code Complete*), so I decided to give it a go. I am not and don't plan to manage people any time soon, but I wanted to understand what makes a good manager, since most people work with one. The book covers a set of topics primarily focused on the happiness and productivity of individuals. It's full of interesting anectodes and it's not prescriptive. I enjoyed it overall and might write a review at some point.</td>
+      <td><b>Peopleware</b> by Tom DeMarco and Timothy Lister. Every list of recommended programming books seems to include this (among others that I like such as <i>Code Complete</i>), so I decided to give it a go. I am not and don't plan to manage people any time soon, but I wanted to understand what makes a good manager, since most people work with one. The book covers a set of topics primarily focused on the happiness and productivity of individuals. It's full of interesting anectodes and it's not prescriptive. I enjoyed it overall and might write a review at some point.</td>
       <td><img src="{{resources_path}}/peopleware.jpg" alt="Peopleware Book Cover"/></td>
     </tr>
 
@@ -175,7 +175,7 @@ As I mentioned, the pandemic left a lot of more indoor time which led to more re
 <table class="books-table">
   <tbody>
     <tr>
-      <td><b>Invisible Cities</b> by Italo Calvino. I started this book a long time ago (2018?) but only finished this year. It consists of a set of short stories about fictious cities. It's hard to make sense on some of them but the imagery some of them evoke are very artistic.</td>
+      <td><b>Invisible Cities</b> by Italo Calvino. I started this book a long time ago (2018?) but only finished this year. It consists of a set of short stories about fictitious cities. It's hard to make sense on some of them but the imagery some of them evoke are very artistic.</td>
       <td><img src="{{resources_path}}/invisible_cities.jpg" alt="Invisible Cities Book Cover"/></td>
     </tr>
     <tr>
