translate another post

--- a/blog/_posts/2015-01-01-2014-in-review.md
+++ b/blog/_posts/2015-01-01-2014-in-review.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "2014 in Review"
-tags: [meta]
+tags: [retrospective]
 ---
 
 I'd like to share a little of what happened during 2014. I've been living in the US for two years now. Time flies!
