--- a/blog/_posts/2014-01-01-2013-in-review.md
+++ b/blog/_posts/2014-01-01-2013-in-review.md
@@ -22,7 +22,7 @@ I tried to keep up on studying Combinatorial Optimization by studying Matroids, 
 
 ## Personal
 
-I've traveled to Philadelphia and New York City. In MoMa in NYC I was able to see some of Erik Demaine's origamis. I've posted about his [Hypars](blog/2010/02/23/hypar.html) in the past.
+I've traveled to Philadelphia and New York City. In MoMa in NYC I was able to see some of Erik Demaine's origamis. I've posted about his [Hypars]({{site.url}}/blog/2010/02/23/hypar.html) in the past.
 
 <figure class="center_children">
     <img src="{{resources_path}}/demaine-origami.png" alt="see caption"/>
