--- a/blog/_posts/2021-10-23-cepstrum.md
+++ b/blog/_posts/2021-10-23-cepstrum.md
@@ -246,7 +246,7 @@ Note that we used the definition of complex cepstrum to show this result, but th
 
 In the source-filter model, the source can be either voiced or unvoiced. For voiced sounds, the vocal chords can be modeled as a periodic impulse train, that is at regular intervals we have a peak magnitude.
 
-We can express such signals as a sum of impulse trains (see *Reproducing Formula* in https://www.kuniga.me/blog/2021/08/31/discrete-time-filters.html).
+We can express such signals as a sum of impulse trains (see Reproducing Formula in [Discrete Time Filters](https://www.kuniga.me/blog/2021/08/31/discrete-time-filters.html)).
 
 $$(G) \quad \vec{e} = \sum_{k = 0}^{\infty} \delta_{t - kN}$$
 
