--- a/blog/_posts/2021-10-23-cepstrum.md
+++ b/blog/_posts/2021-10-23-cepstrum.md
@@ -14,7 +14,7 @@ excerpt_separator: <!--more-->
     </a>
 </figure>
 
-Cepstrum is a signal transform that can be used in speech analysis for determining voice pitch, separate formants (transfer function of the vocal tract) from voiced and unvoiced sources (see), and also in mechanics, for example to detect local faults in gear [1].
+Cepstrum is a signal transform that can be used in speech analysis for determining voice pitch, separate formants (transfer function of the vocal tract) from voiced and unvoiced sources, and in mechanics, for example to detect local faults in gear [1].
 
 Cepstrum is a wordplay with Spectrum, obtained by reversing the first four letters, and was coined by John Tukey, pictured on the left. Another interesting fact is that Cepstrum was invented before the FFT [1].
 
