--- a/blog/_posts/2021-10-23-cepstrum.md
+++ b/blog/_posts/2021-10-23-cepstrum.md
@@ -248,11 +248,11 @@ In the source-filter model, the source can be either voiced or unvoiced. For voi
 
 We can express such signals as a sum of impulse trains (see Reproducing Formula in [Discrete Time Filters](https://www.kuniga.me/blog/2021/08/31/discrete-time-filters.html)).
 
-$$(G) \quad \vec{e} = \sum_{k = 0}^{\infty} \delta_{t - kN}$$
+$$(9) \quad \vec{e} = \sum_{k = 0}^{\infty} \delta_{t - kN}$$
 
 Recall that $\delta_0 = 1$ and 0 elsewhere. We'll have non-zero values for $x_t$ whenever $t = kN$ for $k \in \mathbb{Z}$, that is, for multiples of $N$. Thus $N$ represents the period of this signal.
 
-**Proposition 2.** The Cepstrum of the impulse train (G) is
+**Proposition 2.** The Cepstrum of the impulse train (9) is
 
 $$\vec{\hat e} = \sum_{r = 1}^{\infty} \frac{\delta_{t - rN}}{r}$$
 
@@ -342,7 +342,7 @@ Note that we have also shown that $x^{(R)}_t, x^{(I)}_t, x_t^{(C)}$ are all real
 
 *Proof of Proposition 2:*
 
-To show that the Cepstrum of (G) is
+To show that the Cepstrum of (9) is
 
 $$\vec{\hat e} = \sum_{r = 1}^{\infty} \frac{\delta_{t - rN}}{r}$$
 
