--- a/blog/_posts/2021-11-29-t-digest.md
+++ b/blog/_posts/2021-11-29-t-digest.md
@@ -10,7 +10,7 @@ excerpt_separator: <!--more-->
 
 T-Digest is a structure that can determine the percentile of a collection of values using very low memory without sacrificing too much accuracy. It was created by Ted Dunning and Otmar Ertl [1].
 
-In this post we'll explore the problem of determining percentiles, provide some naive solutions and then cover the T-digest to understand how it solves the problem more effectively.
+In this post we'll explore the problem of determining percentiles, provide some naive solutions and then cover the t-digest to understand how it solves the problem more effectively.
 
 <!--more-->
 
@@ -202,7 +202,7 @@ def merge_bins(x: Bin, y: Bin) -> Bin:
 Suppose we're given two lists of bins corresponding to two t-digests, with $n_1$ and $n_2$ elements, respectively. We can merge them into one and compress the bins.
 
 {% highlight python %}
-def merge(t1: TDigest, t2: TDigest) -> TDigest:
+def combine(t1: TDigest, t2: TDigest) -> TDigest:
     merged_bins = merge_bins(t1.bins, t2.bins)
     return compress(merged_bins)
 {% endhighlight %}
@@ -420,11 +420,13 @@ def get_quantile(t: TDigest, qid: float) -> float:
 
 ## Experiments
 
+All the experiments below use 10,000 values and $\delta = 10$ in the potential function (2).
+
 **Experiment 1.** Elements sampled from a Gaussian distribution:
 
 <figure class="center_children">
     <img src="{{resources_path}}/normal.png" alt="3 charts, the top compares the t-digest quantiles estimates vs the actual distribution for a Gaussian pdf"/>
-    <figcaption>Figure 2: T-digest results for a normal distribution.</figcaption>
+    <figcaption>Figure 2: t-digest results for a normal distribution.</figcaption>
 </figure>
 
 We can see it matches the actual distribution pretty well except on the extremes. The maximum value of the sample is around 4 while the maximum possible prediction (which is the average of the last bin) is 2.6.
@@ -433,7 +435,7 @@ We can see it matches the actual distribution pretty well except on the extremes
 
 <figure class="center_children">
     <img src="{{resources_path}}/real_world.png" alt="3 charts, the top compares the t-digest quantiles estimates vs the actual distribution for a sample dataset"/>
-    <figcaption>Figure 3: T-digest results for a real-world distribution of house prices.</figcaption>
+    <figcaption>Figure 3: t-digest results for a real-world distribution of house prices.</figcaption>
 </figure>
 
 Similarly to the previous experiment, only the extremes are misrepresented. The maximum value of the data is 755k, while the maximum possible prediction is 577k.
@@ -442,10 +444,10 @@ Similarly to the previous experiment, only the extremes are misrepresented. The 
 
 <figure class="center_children">
     <img src="{{resources_path}}/sorted.png" alt="3 charts, the top compares the t-digest quantiles estimates vs the actual distribution for a sample dataset"/>
-    <figcaption>Figure 4: T-digest results for sorted elements.</figcaption>
+    <figcaption>Figure 4: t-digest results for sorted elements.</figcaption>
 </figure>
 
-T-digest works well with sorted insertions, which is a case where the naive mapping of quantiles to bins would do poorly.
+t-digest works well with sorted insertions, which is a case where the naive mapping of quantiles to bins would do poorly.
 
 ### Source
 
@@ -453,9 +455,9 @@ The full implementation is on my Github as a [Jupyter notebook]({{github}}/tdige
 
 ## Conclusion
 
-I had no idea about how T-digest worked and am happy npw with my current understanding. T-digest is an approximate data structure which accuracy for low memory footprint. The implementation is relatively simple, but the theory behind less so.
+I had no idea about how t-digest worked and am happy with my current understanding. t-digest is an approximate data structure which accuracy for low memory footprint. The implementation is relatively simple, but the theory behind less so.
 
-One way I see T-digests is as a histogram with dynamic bin sizes. The bin sizes fit a pre-determined distribution (given by potential function), which is similar to a Gaussian distribution (concentrated around the middle, sparse on the extremities).
+One way I see t-digests is as a histogram with dynamic bin sizes. The bin sizes fit a pre-determined distribution (given by potential function), which is similar to a Gaussian distribution (concentrated around the middle, sparse on the extremities).
 
 One particular difficulty while reading the t-digest's original paper [1] is that they don't seem to have a name for the quantile index, sometimes even overloading it to be the quantile itself. I found easier to understand by having a special term for is, so I decided to give it a name.
 
