--- a/blog/_posts/2021-11-29-t-digest.md
+++ b/blog/_posts/2021-11-29-t-digest.md
@@ -455,7 +455,7 @@ The full implementation is on my Github as a [Jupyter notebook]({{github}}/tdige
 
 ## Conclusion
 
-I had no idea about how t-digest worked and am happy with my current understanding. t-digest is an approximate data structure which accuracy for low memory footprint. The implementation is relatively simple, but the theory behind less so.
+I had no idea about how t-digest worked and am happy with my current understanding. T-Digest is an approximate data structure which trades-off accuracy for low memory footprint. The implementation is relatively simple, but the theory behind less so.
 
 One way I see t-digests is as a histogram with dynamic bin sizes. The bin sizes fit a pre-determined distribution (given by potential function), which is similar to a Gaussian distribution (concentrated around the middle, sparse on the extremities).
 
