--- a/blog/_posts/2016-01-01-2015-in-review.md
+++ b/blog/_posts/2016-01-01-2015-in-review.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "2015 in Review"
-tags: [meta, retrospective]
+tags: [retrospective]
 ---
 
 Another year is over! This is a meta-post to review what happened in 2015. I've been in the US for over 3 years now. 🇺🇸
