--- a/blog/_posts/2021-11-29-t-digest.md
+++ b/blog/_posts/2021-11-29-t-digest.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "T-Digest in Python"
-tags: [data structures, probabilistic algorithms, statistics]
+tags: [data structures, probabilistic algorithms, statistics, python]
 vanity: "2021-11-29-t-digest"
 excerpt_separator: <!--more-->
 ---
