--- a/blog/_posts/2020-01-04-2019-in-review.md
+++ b/blog/_posts/2020-01-04-2019-in-review.md
@@ -51,21 +51,21 @@ Early in the year, after a work trip, I went to Egypt and visited some sites in 
 
 <figure class="center_children">
     <img src="{{site.url}}/resources/blog/2020-01-04-2019-in-review/2019_12_egypt.jpg" alt="egypt.jpg" />
-    <figcaption> 1. Giza Pyramids, 2. Temple in Luxor, 3. Lanterns in the Khan el-Khalili</figcaption>
+    <figcaption> 1. <a href="https://photos.app.goo.gl/KcDLhH2RDYs1fyVC7">Giza Pyramids</a>, 2. <a href="https://photos.app.goo.gl/tdMD1wwapTuyqrf49">Temple in Luxor</a>, 3. <a href="https://photos.app.goo.gl/VBxgqPH2wMfVxqGSA">Lanterns in the Khan el-Khalili</a></figcaption>
 </figure>
 
 In November we attended a wedding in Hyderabad. We decided to tour around New Delhi, Jaipur and Agra before heading south to Hyderabad and Tirupati. From my selection below, one can see how much I admire the Mughal architecture.
 
 <figure class="center_children">
     <img src="{{site.url}}/resources/blog/2020-01-04-2019-in-review/2019_12_india.jpg" alt="india.jpg" />
-    <figcaption> Top: 1. Humayun Tomb (New Delhi), 2. Hawa Mahal (Jaipur), 3. Jal Mahal. Bottom: 1. Karauli Temple, 2. Taj Mahal (Agra), 3. Qtub Tombs (Hyderabad)</figcaption>
+    <figcaption> Top: 1. <a href="https://photos.app.goo.gl/otyJ4tNYctDKE1GXA">Humayun Tomb (New Delhi)</a>, 2. <a href="https://photos.app.goo.gl/owtzS4KgbkbnFSbf8">Hawa Mahal (Jaipur)</a>, 3. <a href="https://photos.app.goo.gl/z7hQ5rvqi3tXXXrw6">Jal Mahal</a>. Bottom: 1. <a href="https://photos.app.goo.gl/prwCjctwS6k8T7679">Karauli Temple</a>, 2. <a href="https://photos.app.goo.gl/fV3a5uZwGs1nuadF7">Taj Mahal (Agra)</a>, 3. <a href="https://photos.app.goo.gl/fV3a5uZwGs1nuadF7">Qtub Tombs (Hyderabad)</a></figcaption>
 </figure>
 
 I had a chance to see many new National Parks and their natural wonders, as part of a quick trip to Seattle, Washington and a road trip in Southern Utah.
 
 <figure class="center_children">
     <img src="{{site.url}}/resources/blog/2020-01-04-2019-in-review/2019_12_nps.jpg" alt="nps.jpg" />
-    <figcaption> Top: 1. Lake Diablo (North Cascades), 2. Angel's Landing Overlook (Zion), 3. Canyons (Bryce). Bottom: 4. Rock formations along the road 5. Famous arch (Arches) 6. Islands in the sky (Canyonlands).</figcaption>
+    <figcaption> Top: 1. <a href="https://photos.app.goo.gl/fV3a5uZwGs1nuadF7">Lake Diablo (North Cascades)</a>, 2. <a href="https://photos.app.goo.gl/gEVkvy8yHdm3bYuu6">Angel's Landing Overlook (Zion)</a>, 3. <a href="https://photos.app.goo.gl/gEVkvy8yHdm3bYuu6">Canyons (Bryce)</a>. Bottom: 4. <a href="https://photos.app.goo.gl/gEVkvy8yHdm3bYuu6">Rock formations (spotted while driving)</a> 5. <a href="https://photos.app.goo.gl/15KpbgXV5SPzBaNy6">Famous arch (Arches)</a> 6. <a href="https://photos.app.goo.gl/8GpE2Y2Xd6Ka8KqN8">Islands in the sky (Canyonlands)</a>.</figcaption>
 </figure>
 
 ### Books
